--- a/prog3-companion/project.json
+++ b/prog3-companion/project.json
@@ -1,7 +1,7 @@
 {
     "title":"prog3_companion",
     "description":"This template builds an app that traces \"Hello, World!\" and breaks into the debugger.",
-    "id":"prog3-companion.project.kinoma.marvell.com",
+    "id":"prog3-com32pa2nion.project.kinoma.marvell.com",
     "tags":[
         "emptySample"
     ],
