added bottom toolbar

--- a/fish-diagnosis-screen/project.json
+++ b/fish-diagnosis-screen/project.json
@@ -1,7 +1,7 @@
 {
     "title":"fish diagnosis screen",
     "description":"This template can be used to create a basic KinomaJS application .",
-    "id":"fish-diagnosis-screen.project.kinoma.marvell.com",
+    "id":"fish-diagnosis-screen.project12345678901234.kinoma.marvell.com",
     "tags":[
     ],
     "Create":{
