--- a/fish-list-screen/project.json
+++ b/fish-list-screen/project.json
@@ -1,7 +1,7 @@
 {
     "title":"fish list screen",
     "description":"This template can be used to create a basic KinomaJS application .",
-    "id":"fish-list-screen.project.kinoma.marvell.com",
+    "id":"fish-list-screen.projssect411341243242343.kinoma.marvell.com",
     "tags":[
         "emptySample"
     ],
