--- a/prototype/project.json
+++ b/prototype/project.json
@@ -1,7 +1,7 @@
 {
     "title":"Prototype",
     "description":"This template can be used to create a basic KinomaJS application .",
-    "id":"prodssssd123423.project.kinoma.marvell.com",
+    "id":"prodssssd12342sd88eddsdddssddsddsfsffdffddddsfddsdfd3.project.kinoma.marvell.com",
     "tags":[
         "emptySample"
     ],
