--- a/pins/project.json
+++ b/pins/project.json
@@ -1,7 +1,7 @@
 {
     "title":"pins",
     "description":"This template builds an app that traces \"Hello, World!\" and breaks into the debugger.",
-    "id":"pins.project.kinoma.marvell.com",
+    "id":"pinsasafasaaghjgkjgfaf.project.kinoma.marvell.com",
     "tags":[
         "emptySample"
     ],
